Table produksi_pilih_plywood {
  id bigint
  tanggal_produksi date
  kendala varchar
  created_at timestamp
  updated_at timestamp
}

Table pegawai_pilih_plywood {
  id bigint
  id_produksi_pilih_plywood bigint [ref: > produksi_pilih_plywood.id]
  id_pegawai bigint
  masuk time
  pulang time
  tugas text
  ijin varchar
  ket varchar
  created_at timestamp
  updated_at timestamp
}

Table bahan_pilih_plywood {
  id bigint
  id_produksi_pilih_plywood bigint [ref: > produksi_pilih_plywood.id]
  id_barang_setengah_jadi_hp bigint
  no_palet int
  jumlah int
  created_at timestamp
  updated_at timestamp
}

Table hasil_pilih_plywood {
  id bigint
  id_produksi_pilih_plywood bigint [ref: > produksi_pilih_plywood.id]
  id_barang_setengah_jadi_hp bigint
  jenis_cacat enum [note: '''
    mengelupas,
    pecah,
    delaminasi/melembung,
    kropos,
    dll
  ''']
  jumlah int
  jumlah_bagus int
  kondisi enum [note: '''
    reject,
    reparasi,
    selesai
  ''']
  ket varchar
  created_at timestamp
  updated_at timestamp
}

Table validasi_pilih_plywood {
  id bigint
  id_produksi_pilih_plywood bigint [ref: > produksi_pilih_plywood.id]
  role varchar
  status varchar
  created_at timestamp
  updated_at timestamp
}